--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-#pandas==2.2.2
+pandas==2.2.2
 #Requests==2.32.3
 streamlit==1.36.0
 #pip install streamlit st_social_media_links
 #pip install streamlit_calendar
 streamlit_calendar
 datetime
+pydeck
